--- a/arch/arm/configs/cyanogenmod_gio_defconfig
+++ b/arch/arm/configs/cyanogenmod_gio_defconfig
@@ -2250,14 +2250,7 @@ CONFIG_DPRAM_WHITELIST=y
 #
 # LinuStoreIII Flash Devices (FSR)
 #
-CONFIG_RFS_FSR=m
-CONFIG_RFS_FSR_STL=m
-CONFIG_RFS_STL_DELETE=y
-# CONFIG_RFS_FSR_STL_BENCHMARK is not set
-# CONFIG_FSR_DUAL_VOLUME is not set
-CONFIG_FSR_FLASH_PHYS_ADDR=0x00100000
-CONFIG_LINUSTOREIII_DEBUG_VERBOSE=0
-CONFIG_LINUSTOREIII_DEBUG=y
+# CONFIG_RFS_FSR is not set
 
 #
 # Samsung Param support
